reusable-ansiblecollection.yml takes optional filename argument

--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -23,17 +23,45 @@ jobs:
       targeted_branch: ${{ inputs.targeted_branch }}
     needs: lint
 
-  uploadansibleartifact:
+  createansiblecollection:
     needs: selectbranch
-    uses: ./.github/workflows/reusable-uploadansibleartifact.yml
-    with:
-      targeted_branch: ${{ needs.selectbranch.outputs.ref }}
+    runs-on: ubuntu-22.04
+
+    steps:
+
+      - name: Collection | create a new collection with our skeleton
+        working-directory: ansible_collections
+        run: |
+          ansible-galaxy collection init --collection-skeleton ../skeletons/ansible-collection-skeleton local.ci
+          ansible-galaxy collection install -r local/ci/requirements.yml
+      - name: Collectionrole | create a new role
+        working-directory: ansible_collections
+        run: |
+          ansible-galaxy role init --role-skeleton ../skeletons/ansible-collection-role-skeleton role1 --init-path local/ci/roles
+          cat - >local/ci/playbooks/ci.yml << EOF
+          ---
+          - name: A ci playbook
+            hosts: localhost
+            roles:
+              - role: local.ci.role1
+          EOF
+
+      - name: Collection | Build the collection
+        run: ansible-galaxy collection build ansible_collections/local/ci
+
+      - name: Collection | Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ansible-collections-${{ inputs.targeted_branch }}
+          path: local-ci-0.1.0.tar.gz
+          if-no-files-found: error
+          overwrite: true
 
   ansiblecollection:
     needs: uploadansibleartifact
     uses: ./.github/workflows/reusable-ansiblecollection.yml
     with:
-      filename: ${{ needs.uploadansibleartifact.outputs.filename }}
+      filename: local-ci-0.1.0.tar.gz
 
   allsuccess:
     if: success() || failure()
