--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -24,8 +24,8 @@ jobs:
     needs: lint
 
   createansiblecollection:
-    needs: selectbranch
     runs-on: ubuntu-22.04
+    needs: selectbranch
 
     steps:
 
@@ -34,6 +34,7 @@ jobs:
         with:
           repository: mafalb/skeletons
           path: skeletons
+          ref: ${{ needs.selectbranch.outputs.ref }}
 
       - name: Create directory for collections
         run: mkdir ansible_collections
