--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -14,6 +14,7 @@ on:  # yamllint disable-line rule:truthy
     inputs:
       ref:
         type: string
+        required: true
       filename:
         type: string
       mock:
