--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -187,6 +187,9 @@ jobs:
           if [[ "$ANSIBLE_LINT_VERSION" =~ ^4 ]]; then
               if test -f .ansible-lint-4; then
                   echo "ansible-lint -c .ansible-lint-4 $ANSIBLE_LINT_VERSION..."
+                  # old ansible lint uses another environment variable
+                  ANSIBLE_COLLECTIONS_PATHS="$ANSIBLE_COLLECTIONS_PATH"
+                  unset ANSIBLE_COLLECTIONS_PATH
                   ansible-lint -v -c .ansible-lint-4
               fi
           elif test "${ANSIBLE_LINT_VERSION}" == "6.8.6" -a -f .ansible-lint-6.8.6; then
