--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -235,4 +235,161 @@ jobs:
           ./build.sh
           echo bla
 
+  virtualenv:
+
+    runs-on: ubuntu-22.04
+    needs: ansible-test
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+
+        os:
+          #- arch
+          - debian12
+          - ubuntu22
+          - ubuntu24
+          - fedora38
+          - fedora39
+          - fedora40
+          - c9s
+          - rocky9
+          - alma9
+
+        ansible_version:
+          - '2.12'
+          - '2.14'
+          - '2.15'
+          - '2.16'
+
+        python_version:
+          - '3.9'
+          - '3.10'
+          - '3.11'
+          - '3.12'
+
+        exclude:
+
+          # impossible ansible - python combinations
+          - ansible_version: '2.12'
+            python_version: '3.11'
+
+          - ansible_version: '2.12'
+            python_version: '3.12'
+
+          - ansible_version: '2.14'
+            python_version: '3.12'
+
+          - ansible_version: '2.15'
+            python_version: '3.12'
+
+          - ansible_version: '2.16'
+            python_version: '3.9'
+
+          # no python3.x-setuptool package
+          # therefore only ansible that support 3.11 are possible
+          #
+          - os: fedora38
+            ansible_version: '2.12'
+          - os: fedora38
+            python_version: '3.12'
+
+
+          # no python3.x-setuptool package
+          # therefore only ansible that support 3.12 are possible
+          #
+          - os: fedora39
+            ansible_version: '2.12'
+          - os: fedora39
+            ansible_version: '2.14'
+          - os: fedora39
+            ansible_version: '2.15'
+
+          - os: fedora40
+            ansible_version: '2.12'
+          - os: fedora40
+            ansible_version: '2.14'
+          - os: fedora40
+            ansible_version: '2.15'
+
+          # c9s has 3.9, 3.11
+          - os: c9s
+            python_version: '3.10'
+          - os: c9s
+            python_version: '3.12'
+          - os: c9s
+            ansible_version: '2.16'
+
+          # alma9 has 3.9, 3.11
+          - os: alma9
+            python_version: '3.10'
+          - os: alma9
+            python_version: '3.12'
+          - os: alma9
+            ansible_version: '2.16'
+
+          # rocky9 has 3.9, 3.11
+          - os: rocky9
+            python_version: '3.10'
+          - os: rocky9
+            python_version: '3.12'
+          - os: rocky9
+            ansible_version: '2.16'
+
+          # arch has 2.7 and 3.9
+          #- os: arch
+          #  python_version: '3.5'
+          #- os: arch
+          #  python_version: '3.6'
+          #- os: arch
+          #  python_version: '3.7'
+          #- os: arch
+          #  python_version: '3.8'
+          #- os: arch
+          #  python_version: '3.10'
+
+          # debian12 has only 3.11
+          - os: debian12
+            python_version: '3.9'
+          - os: debian12
+            python_version: '3.10'
+          - os: debian12
+            python_version: '3.12'
+
+          # ubuntu22 has 3.10, 3.11
+          - os: ubuntu22
+            python_version: '3.9'
+          - os: ubuntu22
+            python_version: '3.12'
+
+          # ubuntu24 has 3.11, 3.12
+          - os: ubuntu24
+            python_version: '3.9'
+          - os: ubuntu24
+            python_version: '3.10'
+
+    env:
+      ANSIBLE_VERSION: ${{ matrix.ansible_version }}
+      PYTHON_VERSION: ${{ matrix.python_version }}
+      CI_IMAGE: ${{ matrix.image }}
+      CI_HOSTNAME: ci-${{ matrix.os }}
+      CI_DRIVER: podman
+      PY_COLORS: 1
+      ANSIBLE_FORCE_COLOR: 1
+
+    steps:
+
+      - name: Install Ansible
+        uses: ./workflows/.github/actions/installansible
+        with:
+          ansible_version: ${{ matrix.ansible_version }}
+          python_version: ${{ matrix.python_version }}
+          extra_packages: '["molecule_podman", "molecule_docker", "molecule"]'
+      - name: molecule scenario virtualenv
+        working-directory: collections/ansible_collections/mafalb/
+        run: |
+          source ~/.virtualenvs/molecule/bin/activate
+          molecule -e .env-${{ matrix.os }}.yml test -s virtualenv -- -e ansible_python_interpreter=/usr/bin/python3
+
 ...
