--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -23,6 +23,21 @@ jobs:
       targeted_branch: ${{ inputs.targeted_branch }}
     needs: lint
 
+  ansiblecollection_info:
+    runs-on: ubuntu-22.04
+    needs: selectbranch
+    steps:
+      - name: Checkout workflows
+        uses: actions/checkout@v4
+      - name: Get Info about mafalb.ansible
+        uses: ./.github/actions/ansiblecollectioninfo
+        with:
+          targeted_branch: ${{ needs.selectbranch.outputs.ref }}
+      - name: Assertions
+        run: |
+          test "$collection_name" = "ansible"
+          test "$namespace" = "mafalb"
+
   createansiblecollection:
     runs-on: ubuntu-22.04
     needs: selectbranch
@@ -44,6 +59,7 @@ jobs:
         run: |
           ansible-galaxy collection init --collection-skeleton ../skeletons/ansible-collection-skeleton local.ci
           ansible-galaxy collection install -r local/ci/requirements.yml
+
       - name: Collectionrole | create a new role
         working-directory: ansible_collections
         run: |
@@ -74,6 +90,14 @@ jobs:
     uses: ./.github/workflows/reusable-ansiblecollection.yml
     with:
       filename: local-ci-0.1.0.tar.gz
+      ref: ${{ needs.selectbranch.outputs.ref }}
+
+  molecule:
+    needs:
+      - selectbranch
+      - createansiblecollection
+    uses: ./.github/workflows/reusable-molecule.yml
+    with:
       ref: ${{ needs.selectbranch.outputs.ref }}
 
   allsuccess:
