--- a/.github/actions/ansiblecollectioninfo/action.yml
+++ b/.github/actions/ansiblecollectioninfo/action.yml
@@ -26,7 +26,7 @@ runs:
         y=yaml.safe_load(sys.stdin.read())
         print(json.dumps(y))
         EOF
-        ) | jq -r '.namespace + " " + .name'))
+        ) | jq -r '.namespace + " " + .name')
 
         test -n "$namespace"
         test -n "$name"
