--- a/.github/actions/ansiblecollectioninfo/action.yml
+++ b/.github/actions/ansiblecollectioninfo/action.yml
@@ -32,7 +32,7 @@ runs:
             # local mode
             read namespace name rest < <(echo "$FILENAME" | sed 's/-/ /g')
         else
-            read namespace name < <(curl -s https://"$SERVER"/"$CI_REPO"/"$CI_REF"/galaxy.yml | python3 <(cat << EOF
+            read namespace name < <(curl -s "https://$SERVER/$CI_REPO/$CI_REF/galaxy.yml" | python3 <(cat << EOF
         import sys, yaml, json
         y=yaml.safe_load(sys.stdin.read())
         print(json.dumps(y))
