--- a/.github/actions/installansible/action.yml
+++ b/.github/actions/installansible/action.yml
@@ -45,8 +45,8 @@ runs:
         ANSIBLE_EXTRA_PACKAGES: ${{ inputs.extra_packages }}
       run: |
         # assert json list
-        packages=$(echo '[]' | jq ". += $ANSIBLE_EXTRA_PACKAGES")
-        packages=$(echo "$packages"| jq '. += ["_ansible==${{ matrix.ansible_version }}",
+        packages=$(echo '[]' | jq -c ". += $ANSIBLE_EXTRA_PACKAGES")
+        packages=$(echo "$packages"| jq -c '. += ["_ansible==${{ matrix.ansible_version }}",
                                                "ansible-lint",
                                                "_ansible_test",
                                                "flake8",
